--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,6 @@ a {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.4px;
-    margin: 0;
 }
 
 .text-main-section {
@@ -270,10 +269,9 @@ a {
 .main-list-portfolio {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     padding-left: 0;
-    column-gap: 24px;
-    row-gap: 48px;
+    gap: 48px 24px;
     margin-top: 72px;
 }
 
@@ -295,16 +293,13 @@ a {
    margin-bottom: 32px;
 }
 
-.online-courses,
-.meditation {
-    margin-right: 0;
-}
-
-
 /* ---------Footer------------- */
 
 .final-info {
     background-color: var(--color-navyblue);
+    padding-top: 100px;
+    padding-bottom: 100px;
+    width: 100%;
 }
 
 .final-logo {
@@ -316,6 +311,9 @@ a {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.32px; 
+    margin-top: 18px;
+    width: 28%;
+
 }
 
  
