--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ p {
 }
 
 ul {
-    list-style-type: none;
+    list-style: none;
     margin: 0;
     padding: 0;
 }
@@ -111,7 +111,6 @@ a {
 }
 
 .logo {
-    display: inline-block;
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 700;
