Adding padding in the header

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,8 @@ a {
 .container-header {
     display: flex;
     justify-content: space-between;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-nav-menu {
@@ -134,8 +136,6 @@ a {
     margin-right: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .header-list-item:last-child {
@@ -272,6 +272,7 @@ a {
 }
 
 .images-team {
+    display: block;
     max-width: 100%;
     height: auto;
 }
@@ -300,6 +301,7 @@ a {
 }
 
 .images-portfolio {
+    display: block;
     max-width: 100%;
     height: auto;
 }
