--- a/css/styles.css
+++ b/css/styles.css
@@ -95,8 +95,6 @@ a {
 
 .header {
     border-bottom: 1px solid var(--color-border); 
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .container-header {
@@ -135,6 +133,8 @@ a {
     margin-right: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-list-item:last-child {
@@ -142,6 +142,7 @@ a {
 }
 
 .header-list-link {
+    display: inline-block;
     color: var(--color-navyblue);
     font-weight: 500;
 }
@@ -153,6 +154,7 @@ a {
 } 
 
 .link-info {
+    display: inline-block;
     color: var(--color-slate);
     font-style: normal;
 }
