--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-}
 :root {
     --color-light: #ffffff;
     --color-iris: #4D5AE5;
@@ -53,12 +48,12 @@ a {
 }
 
 .container {
-    width: 1158px;
+    max-width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
 }
 
-.main-section {
+.section {
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -186,7 +181,7 @@ a {
     align-items: center;
 }
 
-.tittle-main {
+.hero-tittle {
     text-align: center;
     font-family: Roboto;
     font-size: 56px;
@@ -196,6 +191,7 @@ a {
     letter-spacing: 0.02em;
     color: var(--color-light);
     max-width: 496px;
+    margin-bottom: 48px;
 }
 
 .button-service {
@@ -209,7 +205,6 @@ a {
     letter-spacing: 0.04em;
     background-color: var(--color-iris);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin-top: 48px;
     min-width: 169px;
 }
 
